# McLatte

./: .gitignore  .pylintrc  LICENSE  README.md  hp_search_mclatte.py  hp_search_rnn.py  hp_search_semi_skimmed_mclatte.py  hp_search_skimmed_mclatte.py  hp_search_synctwin.py  pkpd.ipynb  pkpd_generate.py  requirements.txt  setup.cfg  simulation.ipynb  test_diabetes.ipynb  test_idealised_disease.ipynb  test_pkpd.ipynb  test_pkpd_1.ipynb  train_mclatte.py  train_mclatte_semi_skimmed.py  train_mclatte_whole.py  train_rnn.py  train_synctwin.py
apps/: hp_search_mclatte.py  hp_search_rnn.py  hp_search_semi_skimmed_mclatte.py  hp_search_skimmed_mclatte.py  hp_search_synctwin.py  pkpd_generate.py
experiments/: README.md  diabetes.ipynb  idealised_disease.ipynb  pkpd.ipynb  plot_utils.py  test_utils.py
mclatte/: _grud.py  config.py  dataset.py  model.py  repr_learn.py  simulation_data.py
results_diabetes/: baseline_rnn_hp.csv
results_idt/: baseline_rnn_hp.csv  mclatte_1.ckpt  mclatte_10.ckpt  mclatte_11.ckpt  mclatte_12.ckpt  mclatte_13.ckpt  mclatte_14.ckpt  mclatte_15.ckpt  mclatte_16.ckpt  mclatte_17.ckpt  mclatte_18.ckpt  mclatte_19.ckpt  mclatte_2.ckpt  mclatte_20.ckpt  mclatte_21.ckpt  mclatte_22.ckpt  mclatte_23.ckpt  mclatte_24.ckpt  mclatte_25.ckpt  mclatte_26.ckpt  mclatte_27.ckpt  mclatte_28.ckpt  mclatte_29.ckpt  mclatte_3.ckpt  mclatte_30.ckpt  mclatte_31.ckpt  mclatte_32.ckpt  mclatte_33.ckpt  mclatte_34.ckpt  mclatte_35.ckpt  mclatte_36.ckpt  mclatte_37.ckpt  mclatte_38.ckpt  mclatte_39.ckpt  mclatte_4.ckpt  mclatte_40.ckpt  mclatte_41.ckpt  mclatte_42.ckpt  (+140 more)
(+628 files in other folders)
