[metadata]
name = mclatte
version = 0.0.1
author = Jason Y Zhang
author_email = yurenzhang2017@gmail.com
description = Multi-cause Latent Factor Individual Treatment Effect Estimator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Jason-Y-Z/McLatte
project_urls =
    Bug Tracker = https://github.com/Jason-Y-Z/McLatte/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src